--- a/specials.html
+++ b/specials.html
@@ -3,50 +3,79 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tennessee — Specials</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <title>Tennessee — Featured Specials</title>
+  <meta name="description" content="Fan-submitted food & drink specials for Tennessee gamedays." />
+  <link rel="icon" href="assets/img/tn-badge.svg" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30" />
 </head>
-<body>
+<body class="page page-specials">
+
   <header class="site-header">
-    <div class="brand">
-      <a class="logo-link" href="index.html"><span class="logo-badge">TN</span><span class="brand-name">Tennessee</span></a>
-    </div>
-    <div class="header-countdown">
-      <div id="countdown" class="countdown">
-        <span class="cd-pill">00</span><span class="cd-label">days</span>
-        <span class="cd-pill">00</span><span class="cd-label">hrs</span>
-        <span class="cd-pill">00</span><span class="cd-label">mins</span>
-        <span class="cd-pill">00</span><span class="cd-label">secs</span>
+    <div class="wrap">
+      <a class="brand" href="index.html" aria-label="Tennessee home">
+        <span class="brand-badge">TN</span><span class="brand-wordmark">Tennessee</span>
+      </a>
+      <nav class="top-nav" aria-label="Primary">
+        <a href="schedule.html">Schedule</a>
+        <a class="active" href="specials.html">Specials</a>
+        <a href="map.html">Map</a>
+        <a href="guide.html">Guide</a>
+      </nav>
+      <div id="countdown" class="countdown-header" aria-live="polite">
+        <div class="pill"><b id="cd-days">00</b><span>days</span></div>
+        <div class="pill"><b id="cd-hrs">00</b><span>hrs</span></div>
+        <div class="pill"><b id="cd-min">00</b><span>mins</span></div>
+        <div class="pill"><b id="cd-sec">00</b><span>secs</span></div>
       </div>
-      <div id="nextGameNote" class="next-note">Next game: TBA</div>
+      <a class="btn btn-small btn-accent" href="submit.html">Submit</a>
     </div>
-    <nav class="site-nav">
-      <a href="schedule.html">Schedule</a>
-      <a class="active" href="specials.html">Specials</a>
-      <a href="map.html">Map</a>
-      <a href="guide.html">Guide</a>
-      <a class="btn" href="submit.html">Submit</a>
-    </nav>
   </header>
 
-  <main class="wrap">
-    <section class="grid grid-single">
-      <article class="card card-span2">
-        <div class="card-head"><h1 class="card-title">Featured Specials</h1></div>
-        <div class="card-body">
-          <div id="specialsList" class="list list-lines small">
-            <!-- Pull from data/specials.json if you add it -->
+  <main class="wrap main-grid">
+    <div class="grid grid-rail">
+
+      <div class="col-main flow">
+        <section class="card">
+          <header class="card-header"><h1 class="h3">Featured specials</h1></header>
+          <div id="specials-grid" class="cards-grid">
+            <!-- Add static cards or render from /data/specials.json when you’re ready -->
+            <article class="card card-elev">
+              <header class="card-header"><h2 class="h5">Add your special</h2></header>
+              <div class="card-body">
+                <p>Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
+                <p><a class="btn btn-small btn-accent" href="submit.html">Submit a listing</a></p>
+              </div>
+            </article>
           </div>
-          <p class="tiny meta">Want yours listed? Use <a href="submit.html">Submit</a>.</p>
-        </div>
-      </article>
-    </section>
+          <p class="muted mt-2">Listings are community-submitted. Call ahead to confirm.</p>
+        </section>
+      </div>
+
+      <aside class="col-rail flow">
+        <section class="card">
+          <header class="card-header"><h2 class="h5">Quick links</h2></header>
+          <ul class="card-list">
+            <li><a href="guide.html">Guide</a></li>
+            <li><a href="map.html">Map</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="submit.html">Submit a listing</a></li>
+          </ul>
+        </section>
+      </aside>
+
+    </div>
   </main>
 
   <footer class="site-footer">
-    <p class="small"><strong>Unofficial notice:</strong> Independent, fan-operated site.</p>
+    <div class="wrap">
+      <p class="muted">Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
+      <nav class="foot-nav">
+        <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
+      </nav>
+    </div>
   </footer>
 
-  <script src="assets/js/app.js"></script>
+  <script src="assets/js/app.js?v=2025-08-30"></script>
+  <script src="assets/js/live.js?v=2025-08-30"></script>
 </body>
 </html>
