--- a/map.html
+++ b/map.html
@@ -4,50 +4,84 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tennessee — Map</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <meta name="description" content="Interactive map for gameday in Knoxville." />
+  <link rel="icon" href="assets/img/tn-badge.svg" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30" />
 </head>
-<body>
+<body class="page page-map">
+
   <header class="site-header">
-    <div class="brand">
-      <a class="logo-link" href="index.html"><span class="logo-badge">TN</span><span class="brand-name">Tennessee</span></a>
-    </div>
-    <div class="header-countdown">
-      <div id="countdown" class="countdown">
-        <span class="cd-pill">00</span><span class="cd-label">days</span>
-        <span class="cd-pill">00</span><span class="cd-label">hrs</span>
-        <span class="cd-pill">00</span><span class="cd-label">mins</span>
-        <span class="cd-pill">00</span><span class="cd-label">secs</span>
+    <div class="wrap">
+      <a class="brand" href="index.html" aria-label="Tennessee home">
+        <span class="brand-badge">TN</span><span class="brand-wordmark">Tennessee</span>
+      </a>
+      <nav class="top-nav" aria-label="Primary">
+        <a href="schedule.html">Schedule</a>
+        <a href="specials.html">Specials</a>
+        <a class="active" href="map.html">Map</a>
+        <a href="guide.html">Guide</a>
+      </nav>
+      <div id="countdown" class="countdown-header" aria-live="polite">
+        <div class="pill"><b id="cd-days">00</b><span>days</span></div>
+        <div class="pill"><b id="cd-hrs">00</b><span>hrs</span></div>
+        <div class="pill"><b id="cd-min">00</b><span>mins</span></div>
+        <div class="pill"><b id="cd-sec">00</b><span>secs</span></div>
       </div>
-      <div id="nextGameNote" class="next-note">Next game: TBA</div>
+      <a class="btn btn-small btn-accent" href="submit.html">Submit</a>
     </div>
-    <nav class="site-nav">
-      <a href="schedule.html">Schedule</a>
-      <a href="specials.html">Specials</a>
-      <a class="active" href="map.html">Map</a>
-      <a href="guide.html">Guide</a>
-      <a class="btn" href="submit.html">Submit</a>
-    </nav>
   </header>
 
-  <main class="wrap">
-    <section class="grid grid-single">
-      <article class="card card-span2">
-        <div class="card-head"><h1 class="card-title">Interactive Map</h1></div>
-        <div class="card-body map-hero">
-          <iframe title="Knoxville Map (Full)"
-            src="https://www.openstreetmap.org/export/embed.html?bbox=-83.992%2C35.930%2C-83.886%2C36.000&layer=mapnik&marker=35.9606%2C-83.9207"
-            loading="lazy"></iframe>
-          <a class="map-open" target="_blank" rel="noopener"
-             href="https://www.openstreetmap.org/?mlat=35.9606&mlon=-83.9207#map=13/35.9606/-83.9207">Open in OSM</a>
-        </div>
-      </article>
-    </section>
+  <main class="wrap main-grid">
+    <div class="grid grid-rail">
+      <div class="col-main flow">
+        <section class="card">
+          <header class="card-header"><h1 class="h3">Interactive map</h1></header>
+          <div class="card-body">
+            <div class="embed-frame ratio-16x9">
+              <iframe title="OpenStreetMap campus"
+                src="https://www.openstreetmap.org/export/embed.html?bbox=-83.950%2C35.940%2C-83.905%2C35.970&layer=mapnik&marker=35.955%2C-83.925"
+                loading="lazy"></iframe>
+            </div>
+            <p class="mt-2">
+              <a target="_blank" rel="noopener" href="https://www.openstreetmap.org/#map=14/35.955/-83.925">Open full map</a>
+            </p>
+          </div>
+        </section>
+      </div>
+
+      <aside class="col-rail flow">
+        <section class="card">
+          <header class="card-header"><h2 class="h5">Quick links</h2></header>
+          <ul class="card-list">
+            <li><a href="guide.html">Guide</a></li>
+            <li><a href="specials.html">Specials</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="submit.html">Submit a listing</a></li>
+          </ul>
+        </section>
+
+        <section class="card">
+          <header class="card-header"><h2 class="h5">Live traffic (Waze)</h2></header>
+          <div class="embed-frame">
+            <iframe title="Waze live map"
+              src="https://embed.waze.com/iframe?zoom=14&lat=35.9549&lon=-83.9250&pin=1"
+              loading="lazy"></iframe>
+          </div>
+        </section>
+      </aside>
+    </div>
   </main>
 
   <footer class="site-footer">
-    <p class="small"><strong>Unofficial notice:</strong> Independent, fan-operated site.</p>
+    <div class="wrap">
+      <p class="muted">Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
+      <nav class="foot-nav">
+        <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
+      </nav>
+    </div>
   </footer>
 
-  <script src="assets/js/app.js"></script>
+  <script src="assets/js/app.js?v=2025-08-30"></script>
+  <script src="assets/js/live.js?v=2025-08-30"></script>
 </body>
 </html>
