--- a/index.html
+++ b/index.html
@@ -2,219 +2,126 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tennessee — Gameday Hub</title>
-  <meta name="description" content="Unofficial Tennessee Volunteers gameday hub: schedule, live score, weather, traffic, and fan tips." />
-  <link rel="icon" href="assets/img/tn-badge.svg" />
-  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Tennessee • Gameday Hub</title>
+  <link rel="preload" href="assets/css/styles.css" as="style">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <script defer src="assets/js/app.js"></script>
 </head>
-<body class="page page-home">
-
-  <!-- Header -->
+<body class="page home">
   <header class="site-header">
-    <div class="wrap">
-      <a class="brand" href="index.html" aria-label="Tennessee home">
-        <span class="brand-badge">TN</span><span class="brand-wordmark">Tennessee</span>
-      </a>
+    <div class="bar container">
+      <a class="brand" href="index.html"><span class="logo">TN</span> <span>Tennessee</span></a>
 
-      <nav class="top-nav" aria-label="Primary">
+      <div id="countdown" aria-label="Countdown">
+        <div class="cd-badge"><span id="cd-days">00</span><span class="cd-label">days</span></div>
+        <div class="cd-badge"><span id="cd-hrs">00</span><span class="cd-label">hrs</span></div>
+        <div class="cd-badge"><span id="cd-min">00</span><span class="cd-label">mins</span></div>
+        <div class="cd-badge"><span id="cd-sec">00</span><span class="cd-label">secs</span></div>
+      </div>
+
+      <nav class="site-nav">
         <a href="schedule.html">Schedule</a>
         <a href="specials.html">Specials</a>
         <a href="map.html">Map</a>
         <a href="guide.html">Guide</a>
+        <a class="btn" href="submit.html">Submit</a>
       </nav>
-
-      <!-- Countdown centered in header -->
-      <div id="countdown" class="countdown-header" aria-live="polite">
-        <div class="pill"><b id="cd-days">00</b><span>days</span></div>
-        <div class="pill"><b id="cd-hrs">00</b><span>hrs</span></div>
-        <div class="pill"><b id="cd-min">00</b><span>mins</span></div>
-        <div class="pill"><b id="cd-sec">00</b><span>secs</span></div>
-      </div>
-
-      <a class="btn btn-small btn-accent" href="submit.html">Submit</a>
     </div>
   </header>
 
-  <!-- Main -->
-  <main class="wrap main-grid">
-    <div class="grid grid-rail">
+  <main class="container rail-layout">
+    <!-- Content column -->
+    <div class="content stack">
+      <section class="card" id="live-score">
+        <h2>Live Score Box</h2>
+        <div id="score-box" class="meta">Tennessee — <span id="score-status">No game in progress.</span></div>
+      </section>
 
-      <!-- Main column -->
-      <div class="col-main flow">
-
-        <!-- Live Score Box -->
-        <section class="card" id="score-card">
-          <header class="card-header">
-            <h1 class="h3">Live Score Box</h1>
-            <div class="menu-dots" aria-hidden="true">•••</div>
-          </header>
-          <div id="scorebox" class="card-body">
-            <div class="score-row">
-              <div class="team">
-                <div class="team-name">Tennessee</div>
-              </div>
-              <div class="score-status">
-                <span class="muted">No game in progress.</span>
-              </div>
-            </div>
-            <div class="score-meta"><span class="muted">—</span></div>
-          </div>
+      <div class="grid cards-3">
+        <section class="card" id="upcoming">
+          <div class="kv"><h2>Upcoming Game</h2><button id="addCal" class="btn secondary">Add to Google Calendar</button></div>
+          <div id="next-game" class="meta">Loading…</div>
         </section>
 
-        <!-- Upcoming game -->
-        <section class="card">
-          <header class="card-header">
-            <h2 class="h4">Upcoming Game</h2>
-            <div class="menu-dots" aria-hidden="true">•••</div>
-          </header>
-          <div class="card-body">
-            <div id="next-game">Loading…</div>
-            <p class="mt-2">
-              <a id="btn-ical" class="btn btn-small" href="#" target="_blank" rel="noopener">Add to Google Calendar</a>
-            </p>
-          </div>
+        <section class="card" id="weather">
+          <h2>Weather (3-day)</h2>
+          <ul id="weather-list" class="meta" style="margin:0; padding-left:1rem">
+            <li>Fri — —/—°, — mph</li>
+            <li>Sat — —/—°, — mph</li>
+            <li>Sun — —/—°, — mph</li>
+          </ul>
+          <div id="wx-note" class="meta" style="margin-top:.4rem">Neyland Stadium. Source: Open-Meteo.</div>
         </section>
 
-        <!-- Weather (3-day) -->
-        <section class="card">
-          <header class="card-header">
-            <h2 class="h4">Weather (3-day)</h2>
-            <div class="menu-dots" aria-hidden="true">•••</div>
-          </header>
-          <div class="card-body">
-            <ul id="wx-3day" class="wx-list">
-              <li>Fri — <span class="muted">—/—</span> — <span class="muted">— mph</span></li>
-              <li>Sat — <span class="muted">—/—</span> — <span class="muted">— mph</span></li>
-              <li>Sun — <span class="muted">—/—</span> — <span class="muted">— mph</span></li>
-            </ul>
-            <small id="wx-footnote" class="muted">Neyland Stadium. Source: Open-Meteo.</small>
-          </div>
-        </section>
-
-        <!-- Schedule & Results (shows 3 by default) -->
-        <section class="card">
-          <header class="card-header">
-            <h2 class="h4">Schedule & Results</h2>
-            <small id="last-updated" class="muted">Data updated — loading…</small>
-          </header>
-          <div class="card-body">
-            <div class="table-scroll">
-              <table id="sched" class="table">
-                <thead>
-                  <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
-                </thead>
-                <tbody><!-- filled by app.js --></tbody>
-              </table>
-            </div>
-            <div class="mt-2">
-              <button id="toggle-full" class="btn btn-small">Show full schedule</button>
-            </div>
-            <p class="muted mt-2">Times/TV subject to change. Check official sources day-of.</p>
-          </div>
-        </section>
-
-        <!-- Featured Specials -->
-        <section class="card">
-          <header class="card-header"><h2 class="h4">Featured Specials</h2></header>
-          <div class="card-body">
-            <p>See the <a href="specials.html">specials</a> page for new listings.</p>
-          </div>
-        </section>
-
-        <!-- TV & Streams -->
-        <section class="card">
-          <header class="card-header"><h2 class="h4">TV & Streams (This Week)</h2></header>
-          <div class="card-body">
-            <p>Updates closer to kickoff.</p>
-          </div>
-        </section>
-
-        <!-- Odds -->
-        <section class="card">
-          <header class="card-header"><h2 class="h4">Odds</h2></header>
-          <div class="card-body">
-            <p class="muted">For entertainment only. Check a licensed sportsbook for current numbers.</p>
-          </div>
-        </section>
-
-        <!-- Rankings -->
-        <section class="card">
-          <header class="card-header"><h2 class="h4">Rankings (AP Top 25)</h2></header>
-          <div id="ap-rankings" class="card-body">
-            <p class="muted">AP poll updates weekly.</p>
-          </div>
-        </section>
-
-        <!-- Quick links -->
-        <section class="card">
-          <header class="card-header"><h2 class="h4">Quick Links</h2></header>
-          <div class="card-body">
-            <p>
-              <a href="guide.html">Guide</a> ·
-              <a href="specials.html">Specials</a> ·
-              <a href="map.html">Map</a> ·
-              <a href="schedule.html">Schedule</a> ·
-              <a href="submit.html">Submit</a>
-            </p>
-          </div>
-        </section>
-
-      </div>
-
-      <!-- Right rail -->
-      <aside class="col-rail flow">
-
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Live Traffic (Neyland)</h2></header>
-          <div class="card-body">
-            <div class="embed-frame">
-              <iframe title="Waze live map"
-                src="https://embed.waze.com/iframe?zoom=14&lat=35.9549&lon=-83.9250&pin=1"
-                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <small class="muted">Data: Waze Live Map</small>
-          </div>
-        </section>
-
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Mini Map</h2></header>
-          <div class="card-body">
-            <div class="embed-frame">
-              <iframe title="Campus mini map"
-                src="https://www.openstreetmap.org/export/embed.html?bbox=-83.940%2C35.944%2C-83.910%2C35.964&layer=mapnik&marker=35.955%2C-83.925"
-                loading="lazy"></iframe>
-            </div>
-            <small><a target="_blank" rel="noopener" href="https://www.openstreetmap.org/#map=15/35.955/-83.925">Open full map</a></small>
-          </div>
-        </section>
-
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Quick Links</h2></header>
-          <ul class="card-list">
+        <section class="card" id="quick-links">
+          <h2>Quick Links</h2>
+          <ul class="meta" style="margin:0; padding-left:1rem">
             <li><a href="guide.html">Guide</a></li>
             <li><a href="specials.html">Specials</a></li>
             <li><a href="map.html">Map</a></li>
             <li><a href="submit.html">Submit a listing</a></li>
           </ul>
         </section>
+      </div>
 
-      </aside>
+      <section class="card" id="sched-wrap">
+        <div class="kv">
+          <h2>Schedule & Results</h2>
+          <span class="meta" id="data-updated">Data updated — Loading…</span>
+        </div>
+        <table class="table" id="sched">
+          <thead><tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr></thead>
+          <tbody id="sched-body"><tr><td colspan="5" class="meta">Loading…</td></tr></tbody>
+        </table>
+        <div class="stack" style="margin-top:.6rem">
+          <button id="toggle-sched" class="btn secondary">Show full schedule</button>
+          <p class="meta">Times/TV subject to change. Check official sources day-of.</p>
+        </div>
+      </section>
+
+      <section class="card" id="specials">
+        <h2>Featured Specials</h2>
+        <p class="meta">See the <a href="specials.html">specials</a> page for new listings.</p>
+      </section>
+
+      <section class="card" id="tv-streams">
+        <h2>TV & Streams (This Week)</h2>
+        <p class="meta">Updates closer to kickoff.</p>
+      </section>
+
+      <section class="card" id="odds">
+        <h2>Odds</h2>
+        <p class="meta">For entertainment only. Check a licensed sportsbook for current numbers.</p>
+      </section>
+
+      <section class="card" id="rankings">
+        <h2>Rankings (AP Top 25)</h2>
+        <p class="meta">AP poll updates weekly.</p>
+      </section>
     </div>
+
+    <!-- Right rail -->
+    <aside class="rail stack">
+      <section class="card">
+        <h2>Live Traffic (Neyland)</h2>
+        <iframe class="embed map" src="https://embed.waze.com/iframe?lat=35.9545&lon=-83.9250&zoom=14&pin=1"></iframe>
+        <div class="meta">Data: Waze Live Map</div>
+      </section>
+
+      <section class="card">
+        <h2>Mini Map</h2>
+        <iframe class="embed map" src="https://www.openstreetmap.org/export/embed.html?bbox=-84.05%2C35.86%2C-83.80%2C36.02&layer=mapnik&marker=35.955%2C-83.925"></iframe>
+        <a class="meta" href="https://www.openstreetmap.org/?mlat=35.955&mlon=-83.925#map=13/35.955/-83.925" target="_blank" rel="noopener">Open full map</a>
+      </section>
+    </aside>
   </main>
 
-  <!-- Footer -->
   <footer class="site-footer">
-    <div class="wrap">
-      <p class="muted">Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
-      <nav class="foot-nav">
-        <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
-      </nav>
+    <div class="container">
+      <p>Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
+      <p><a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a></p>
     </div>
   </footer>
-
-  <!-- Scripts -->
-  <script src="assets/js/app.js?v=2025-08-30"></script>
-  <script src="assets/js/live.js?v=2025-08-30"></script>
 </body>
 </html>
